# GraphClustering

./: (1).gitignore  .coveralls.yml  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Community.h  GraphClustering(1).sln  GraphClustering.h  GraphClustering.sln  GraphClusteringLib.sln  Leiden.cpp  Louvain.cpp  Makefile  Output.cpp  Output.h  Readme(1).md  Readme.md  appveyor(1).yml  appveyor.yml  cmake_install.cmake  graph_binary.cpp  graph_binary.h  partition.cpp  partition.h  start_testing  testApp.cpp
C++ project/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
C++ project/src/: GraphBinary.cpp  Leiden.cpp  Louvain.cpp
C++ project/src/include/: GraphBinary.h  Partition.h
C++ project/test/Graph/: GraphTests.cpp  TestList.cmake
C++ project/test/GraphClustering/Leiden/: LeidenTests.cpp  TestList.cmake
C++ project/test/GraphClustering/Louvain/: LouvainTests.cpp  TestList.cmake
C++ project/test/Partition/: PartitionTests.cpp  TestList.cmake
C++ project/test/TestData/: ChRandCommTest1.txt  SinglComm4.txt  convert  test2.txt  test4.txt
GraphClustering/: GraphClustering.csproj
GraphClustering/src/: Class.cs  Community.cs  CommunityManager(1).cs  CommunityManager.cs  GraphPartition.cs  ICommunity.cs  IEdge.cs  IGraphPartition(1).cs  IGraphPartition.cs  IPartition.cs  IPartitionableGraph.cs  IWeightedEdge(1).cs  Partition.cs  PartitionType(1).cs  PartitionType.cs
GraphClustering/src/Algorithms/: Louvain(1).cs  Louvain.cs
GraphClustering/src/Metrics/: Modularity.cs  PartitionMetric.cs
GraphClusteringDemo/: GraphClusteringDemo(1).csproj  Program.cs
GraphClusteringLib/: GraphClusteringLib.csproj
GraphClusteringLib/src/: Community.cs
GraphClusteringLibTest/: UnitTest1.cs
GraphClusteringTest/: GraphClusteringTest(1).csproj  GraphClusteringTest.csproj  GraphFactory.cs  UnitTest1.cs  UtilityFunctions.cs
GraphClusteringTest/Builders/: CommunityBuilder.cs  CommunityManagerBuilder.cs  GraphBuilder.cs  PartitionBuilder.cs
GraphClusteringTest/Builders/GraphBuilding/: AdjacencyGraph.cs  Edge.cs  GraphBuilder.cs  UndirectedGraph.cs  WeightedEdge.cs
GraphClusteringTest/TestClasses/: CommunityManager.cs  GraphFactory.cs  GraphPartition.cs  TCommunityManager.cs  TIPartitionableGraph.cs  TLouvain.cs  TPartition.cs  TestPartition.cs  UtilityFunctions.cs
GraphClusteringTest/TestClasses/Metrics/: Modularity.cs
GraphClusteringTest/TestClasses/TestCommunity/: TCommunity.cs
GraphClusteringTest/TestClasses/TestComunity/: TCommunityBase.cs  TCommunity_Base.cs
GraphClusteringTest/TestClasses/TestData/: SinglComm5.txt  comm3.txt  comm5.txt  notcomm1.txt  test1.txt  test5.txt
GraphClusteringTest/TestClasses/TestGraphPartition/: TGraphPartition.cs
GraphClusteringTest/TestClasses/TestPartition/: TGraphPartition.cs  TPartition.cs
GraphClusteringTest/TestResults/cf89d5a6-794f-4ad0-8e0e-42cc48d3fd4d/: coverage.cobertura.xml
GraphClusteringTest/src/: Community(1).cs  Community.cs  CommunityManager(1).cs  GraphPartition(1).cs
GraphClusteringTest/src/Algorithms/: Louvain.cs
GraphClusteringTest/src/Builders/: CommunityManagerBuilder.cs  PartitionBuilder(1).cs  PartitionBuilder.cs
GraphClusteringTest/src/Metrics/: Modularity.cs
GraphLibFacade/: Edge.cs  GraphLibFacade.csproj
GraphLibFacade/src/: AdjacencyGraph(1).cs  UndirectedGraph(1).cs  WeightedEdge.cs
GraphLibFacade/tests/: GraphBuilder.cs  IPartitionableGraph.cs
src/: CMakeLists.txt  GraphBinary.cpp  Leiden.cpp  Louvain.cpp  Makefile  Node.cpp  Output.cpp  Partition.cpp  cmake_install.cmake
src/include/: Community.h  Edge.h  GraphBinary.h  GraphClustering.h  Node.h  Output.h  Partition.h
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
test/Graph/: CMakeLists.txt  CTestTestfile.cmake  GraphTest1  GraphTest1.cpp  GraphTest2  GraphTest2.cpp  GraphTest3  GraphTest3.cpp  GraphTest4  GraphTest4.cpp  GraphTest5  GraphTest5.cpp  GraphTest6  GraphTest6.cpp  GraphTest7  GraphTest7.cpp  GraphTests  Makefile  cmake_install.cmake
test/Graph/TestData/: comm2.txt  comm4.txt  nottest1.txt
test/GraphClustering/Leiden/: CMakeLists.txt  CTestTestfile.cmake  Leiden.h  LeidenTest1  LeidenTest1.cpp  LeidenTest10  LeidenTest10.cpp  LeidenTest2  LeidenTest2.cpp  LeidenTest3  LeidenTest3.cpp  LeidenTest4  LeidenTest4.cpp  LeidenTest5  LeidenTest5.cpp  LeidenTest6  LeidenTest6.cpp  LeidenTest7  LeidenTest7.cpp  LeidenTest8  LeidenTest8.cpp  LeidenTest9  LeidenTest9.cpp  LeidenTests  Makefile  cmake_install.cmake
test/GraphClustering/Leiden/TestData/: SinglComm2.txt  SinglComm3.txt  comm1.txt
test/GraphClustering/Louvain/: CMakeLists.txt  CTestTestfile.cmake  LouvainTest1  LouvainTest1.cpp  LouvainTests  Makefile  cmake_install.cmake
test/GraphClustering/Louvain/TestData/: SinglComm1.txt  agrtest3.txt
test/Partition/: CMakeLists.txt  CTestTestfile.cmake  Makefile  PartitionTest1  PartitionTest1.cpp  PartitionTest2  PartitionTest2.cpp  PartitionTest3  PartitionTest3.cpp  PartitionTest4  PartitionTest4.cpp  PartitionTest5  PartitionTest5.cpp  PartitionTest6  PartitionTest6.cpp  PartitionTests  cmake_install.cmake
test/TestData/: community  test3.txt
test/Testing/Temporary/: CTestCostData.txt  LastTest.log.tmp
